Revert "Fix floats being put in the incorrect register"
This reverts commit 716456d0b2c3cb7d06dfc07024b943133d3f9fa6.